feat: Improve SEO and Vercel deployment config
Adds comprehensive meta tags to index.html for better search engine visibility and social sharing.
Updates vercel.json to configure clean URLs and rewrite all routes to index.html for single-page application routing.
Includes a basic robots.txt file to guide search engine crawlers.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pankaj Kapri - Portfolio</title>
+    <title>Pankaj Kapri | Software Engineer & Data Scientist</title>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Portfolio of Pankaj Kapri - Architecting Intelligent Systems with 5+ years of experience in Software Engineering and Data Science.">
+    <meta name="keywords" content="Pankaj Kapri, Software Engineer, Data Scientist, Portfolio, AI, Machine Learning, Web Development, Flutter, Python">
+    <meta name="author" content="Pankaj Kapri">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pankajkapri.com/">
+    <meta property="og:title" content="Pankaj Kapri | Software Engineer & Data Scientist">
+    <meta property="og:description" content="Explore the portfolio of Pankaj Kapri, featuring AI-driven projects and high-performance software systems.">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1620712943543-bcc4628c6bb5?auto=format&fit=crop&q=80&w=1200">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pankajkapri.com/">
+    <meta property="twitter:title" content="Pankaj Kapri | Software Engineer & Data Scientist">
+    <meta property="twitter:description" content="Explore the portfolio of Pankaj Kapri, featuring AI-driven projects and high-performance software systems.">
+    <meta property="twitter:image" content="https://images.unsplash.com/photo-1620712943543-bcc4628c6bb5?auto=format&fit=crop&q=80&w=1200">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
