--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta name="keywords" content="Pankaj Kapri, Software Engineer, Data Scientist, Portfolio, AI, Machine Learning, Web Development, Flutter, Python">
     <meta name="author" content="Pankaj Kapri">
     
+    <!-- PWA & Favicon -->
+    <link rel="icon" type="image/svg+xml" href="https://api.iconify.design/solar:code-circle-bold-duotone.svg?color=%236366f1">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#020617">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pankajkapri.com/">
@@ -156,6 +161,10 @@
     <div class="blob blob-3 top-[40%] left-[50%]"></div>
 
     <div id="root"></div>
+
+    <!-- Entry Point -->
+    <script type="module" src="index.tsx"></script>
+
     <script>
         const spotlight = document.getElementById('spotlight');
         document.addEventListener('mousemove', (e) => {
