--- a/index.html
+++ b/index.html
@@ -137,6 +137,38 @@
             will-change: transform;
         }
 
+        /* Vibrant Multi-Color Glow Effects */
+        @keyframes vibrant-glow {
+            0% { box-shadow: 0 0 15px rgba(16, 185, 129, 0.5), 0 0 5px rgba(16, 185, 129, 0.2); border-color: rgba(16, 185, 129, 0.3); }
+            25% { box-shadow: 0 0 15px rgba(6, 182, 212, 0.5), 0 0 5px rgba(6, 182, 212, 0.2); border-color: rgba(6, 182, 212, 0.3); }
+            50% { box-shadow: 0 0 15px rgba(99, 102, 241, 0.5), 0 0 5px rgba(99, 102, 241, 0.2); border-color: rgba(99, 102, 241, 0.3); }
+            75% { box-shadow: 0 0 15px rgba(139, 92, 246, 0.5), 0 0 5px rgba(139, 92, 246, 0.2); border-color: rgba(139, 92, 246, 0.3); }
+            100% { box-shadow: 0 0 15px rgba(16, 185, 129, 0.5), 0 0 5px rgba(16, 185, 129, 0.2); border-color: rgba(16, 185, 129, 0.3); }
+        }
+        
+        .btn-vibrant-glow {
+            animation: vibrant-glow 6s linear infinite;
+            transition: all 0.3s ease;
+        }
+        
+        .btn-vibrant-glow:hover {
+            box-shadow: 0 0 30px rgba(99, 102, 241, 0.8), 0 0 10px rgba(139, 92, 246, 0.4);
+            transform: translateY(-2px);
+            animation-duration: 2s; /* Faster cycle on hover */
+        }
+
+        @keyframes static-glow-indigo {
+            0%, 100% { box-shadow: 0 0 15px rgba(99, 102, 241, 0.4); }
+            50% { box-shadow: 0 0 35px rgba(99, 102, 241, 0.7); }
+        }
+        .glow-indigo { animation: static-glow-indigo 4s ease-in-out infinite; }
+
+        @keyframes static-glow-emerald {
+            0%, 100% { box-shadow: 0 0 15px rgba(16, 185, 129, 0.4); }
+            50% { box-shadow: 0 0 35px rgba(16, 185, 129, 0.7); }
+        }
+        .glow-emerald { animation: static-glow-emerald 4s ease-in-out infinite; }
+
         ::-webkit-scrollbar { width: 4px; }
         ::-webkit-scrollbar-track { background: transparent; }
         ::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.1); border-radius: 10px; }
